@@ -1,0 +1,22 @@
+/* XPM */
+static const char * const rotate180_xpm[] = {
+"16 16 2 1 0 0",
+"  c #4E4E50",
+"! c None",
+"!!!!!!! !!!!!!!!",
+"!!!!!!!  !!!!!!!",
+"!!!!!!!   !!!!!!",
+"!!!!!      !  !!",
+"!!!        !   !",
+"!!   !!   !!!   ",
+"!  !!!!  !!!!!  ",
+"   !!!! !!!!!!  ",
+"  !!!!!! !!!!   ",
+"  !!!!!  !!!!  !",
+"   !!!   !!   !!",
+"!   !        !!!",
+"!!  !      !!!!!",
+"!!!!!!   !!!!!!!",
+"!!!!!!!  !!!!!!!",
+"!!!!!!!! !!!!!!!"
+};
