@@ -168,6 +168,7 @@ enum
   evFullScreen,
   evNormalSize,
   evSetAspect,
+  evSetRotation,
   evIncVolume,
   evDecVolume,
   evSetVolume,
